[package]
name = "pg-ntex-session"
version = "0.1.0"
edition = "2021"

[dependencies]
cookie = "0.18.1"
diesel = { version = "2.2.10", features = ["postgres", "postgres_backend"] }
ntex = "2.12.4"
ntex-session = "2.0.0"
once_cell = "1.21.3"
serde_json = "1.0.140"
uuid = { version = "1.17.0", features = ["v4"] }
