[package]
name = "pg-ntex-session"
version = "0.1.0"
edition = "2021"
description = "Save session on PostgreSQL database with Diesel, inspired by ntex cookie session"
keywords = ["network", "diesel", "ntex", "session", "postgres"]
repository = "https://github.com/ir1keren/pg-ntex-session.git"
categories = ["network-programming", "web-programming"]

[dependencies]
anyhow = "1.0.98"
bcrypt = "0.17.0"
chrono = "0.4.41"
cookie = "0.18.1"
diesel = { version = "2.2.10", features = [
    "chrono",
    "postgres",
    "postgres_backend",
    "r2d2",
] }
ntex = "2.12.4"
ntex-session = "2.0.0"
once_cell = "1.21.3"
serde_json = "1.0.140"
simple_crypt = "0.2.3"
uuid = { version = "1.17.0", features = ["v4"] }
